--- a/bbb.io-kernel/suite/buster/debian/control
+++ b/bbb.io-kernel/suite/buster/debian/control
@@ -39,6 +39,8 @@ Depends:
 Recommends:
  libpruio-modules-4.19.94-ti-r73
  , ti-sgx-ti335x-modules-4.19.94-ti-r73
+ , rtl8723bu-modules-4.19.94-ti-r73
+ , rtl8821cu-modules-4.19.94-ti-r73
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 4.19-ti for am335x
  This metapackage will install linux-image-4.19-ti for am335x in Debian.
@@ -81,6 +83,8 @@ Depends:
 Recommends:
  libpruio-modules-4.19.94-ti-rt-r73
  , ti-sgx-ti335x-modules-4.19.94-ti-rt-r73
+ , rtl8723bu-modules-4.19.94-ti-rt-r73
+ , rtl8821cu-modules-4.19.94-ti-rt-r73
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 4.19-ti-rt for am335x
  This metapackage will install linux-image-4.19-ti-rt for am335x in Debian.
@@ -123,6 +127,8 @@ Depends:
 Recommends:
  libpruio-modules-5.4.106-ti-r41
  , ti-sgx-ti335x-modules-5.4.106-ti-r41
+ , rtl8723bu-modules-5.4.106-ti-r41
+ , rtl8821cu-modules-5.4.106-ti-r41
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.4-ti for am335x
  This metapackage will install linux-image-5.4-ti for am335x in Debian.
@@ -165,6 +171,8 @@ Depends:
 Recommends:
  libpruio-modules-5.4.106-ti-rt-r41
  , ti-sgx-ti335x-modules-5.4.106-ti-rt-r41
+ , rtl8723bu-modules-5.4.106-ti-rt-r41
+ , rtl8821cu-modules-5.4.106-ti-rt-r41
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.4-ti-rt for am335x
  This metapackage will install linux-image-5.4-ti-rt for am335x in Debian.
@@ -188,11 +196,11 @@ Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.109-ti-r45
+ linux-image-5.10.120-ti-r46
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.109-ti-r45
+Recommends: libpruio-modules-5.10.120-ti-r46
 Description: BeagleBoard.org 5.10-ti
  This metapackage will install linux-image-5.10-ti in Debian.
 
@@ -200,14 +208,16 @@ Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.109-ti-r45
+ linux-image-5.10.120-ti-r46
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.109-ti-r45
- , ti-sgx-ti335x-modules-5.10.109-ti-r45
- , qcacld-2.0-modules-5.10.109-ti-r45
+ libpruio-modules-5.10.120-ti-r46
+ , ti-sgx-ti335x-modules-5.10.120-ti-r46
+ , qcacld-2.0-modules-5.10.120-ti-r46
+ , rtl8723bu-modules-5.10.120-ti-r46
+ , rtl8821cu-modules-5.10.120-ti-r46
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti for am335x
  This metapackage will install linux-image-5.10-ti for am335x in Debian.
@@ -216,13 +226,13 @@ Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.109-ti-r45
+ linux-image-5.10.120-ti-r46
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.109-ti-r45
- , ti-sgx-jacinto6evm-modules-5.10.109-ti-r45
+ libpruio-modules-5.10.120-ti-r46
+ , ti-sgx-jacinto6evm-modules-5.10.120-ti-r46
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti for am57xx
  This metapackage will install linux-image-5.10-ti for am57xx in Debian.
@@ -231,11 +241,11 @@ Package: bbb.io-kernel-5.10-ti-rt
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.109-ti-rt-r45
+ linux-image-5.10.120-ti-rt-r46
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.109-ti-rt-r45
+Recommends: libpruio-modules-5.10.120-ti-rt-r46
 Description: BeagleBoard.org 5.10-ti-rt
  This metapackage will install linux-image-5.10-ti-rt in Debian.
 
@@ -243,14 +253,16 @@ Package: bbb.io-kernel-5.10-ti-rt-am335x
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.109-ti-rt-r45
+ linux-image-5.10.120-ti-rt-r46
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.109-ti-rt-r45
- , ti-sgx-ti335x-modules-5.10.109-ti-rt-r45
- , qcacld-2.0-modules-5.10.109-ti-rt-r45
+ libpruio-modules-5.10.120-ti-rt-r46
+ , ti-sgx-ti335x-modules-5.10.120-ti-rt-r46
+ , qcacld-2.0-modules-5.10.120-ti-rt-r46
+ , rtl8723bu-modules-5.10.120-ti-rt-r46
+ , rtl8821cu-modules-5.10.120-ti-rt-r46
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti-rt for am335x
  This metapackage will install linux-image-5.10-ti-rt for am335x in Debian.
@@ -259,13 +271,13 @@ Package: bbb.io-kernel-5.10-ti-rt-am57xx
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.109-ti-rt-r45
+ linux-image-5.10.120-ti-rt-r46
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.109-ti-rt-r45
- , ti-sgx-jacinto6evm-modules-5.10.109-ti-rt-r45
+ libpruio-modules-5.10.120-ti-rt-r46
+ , ti-sgx-jacinto6evm-modules-5.10.120-ti-rt-r46
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti-rt for am57xx
  This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
