--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -354,6 +354,15 @@ Recommends: libpruio-modules-5.18.8-bone7
 Description: BeagleBoard.org 5.18-bone for am335x
  This metapackage will install linux-image-5.18-bone for am335x in Debian.
 
+Package: bbb.io-kernel-5.19-bone
+Section: metapackages
+Architecture: all
+Pre-Depends: linux-image-5.19.0-rc6-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.19.0-rc6-bone1
+Description: BeagleBoard.org 5.19-bone for am335x
+ This metapackage will install linux-image-5.19-bone for am335x in Debian.
+
 Package: bbb.io-kernel-4.19-bone-rt
 Section: metapackages
 Architecture: all
