--- a/bela-seasocks/suite/bullseye/debian/control
+++ b/bela-seasocks/suite/bullseye/debian/control
@@ -2,15 +2,18 @@ Source: seasocks
 Section: unknown
 Priority: optional
 Maintainer: Kurva Prashanth <krvprashanth@riseup.net>
-Build-Depends: debhelper-compat (= 13)
+Build-Depends:
+ debhelper-compat (= 13)
 Standards-Version: 4.5.1
-Homepage: <insert the upstream URL, if relevant>
+Homepage: https://github.com/mattgodbolt/seasocks
 #Vcs-Browser: https://salsa.debian.org/debian/seasocks
 #Vcs-Git: https://salsa.debian.org/debian/seasocks.git
 Rules-Requires-Root: no
 
 Package: seasocks
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
+Description: A tiny embeddable C++ HTTP and WebSocket server
+ Seasocks - A tiny embeddable C++ HTTP and WebSocket server
