--- a/bela-seasocks/suite/bullseye/debian/control
+++ b/bela-seasocks/suite/bullseye/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Kurva Prashanth <krvprashanth@riseup.net>
 Build-Depends:
  debhelper-compat (= 13)
+ , cmake
 Standards-Version: 4.5.1
 Homepage: https://github.com/mattgodbolt/seasocks
 #Vcs-Browser: https://salsa.debian.org/debian/seasocks
