--- a/bela-seasocks/suite/bullseye/debian/control
+++ b/bela-seasocks/suite/bullseye/debian/control
@@ -5,6 +5,7 @@ Maintainer: Kurva Prashanth <krvprashanth@riseup.net>
 Build-Depends:
  debhelper-compat (= 13)
  , cmake
+ , python3-dev
 Standards-Version: 4.5.1
 Homepage: https://github.com/mattgodbolt/seasocks
 #Vcs-Browser: https://salsa.debian.org/debian/seasocks
