--- a/bela-seasocks/suite/bullseye/debian/rules
+++ b/bela-seasocks/suite/bullseye/debian/rules
@@ -22,7 +22,7 @@ override_dh_strip:
 	# Just disable for now...
 
 override_dh_auto_configure:
-	mkdir -p ./build ; cd ./build ; cmake .. -DDEFLATE_SUPPORT=OFF -DUNITTESTS=OFF -DSEASOCKS_SHARED=ON ; make -j${CORES} seasocks ; /usr/bin/cmake -P cmake_install.cmake ; rm -rf ./build ; ldconfig 
+	mkdir -p ./build ; cd ./build ; cmake .. -DDEFLATE_SUPPORT=OFF -DUNITTESTS=OFF -DSEASOCKS_SHARED=ON ; make -j${CORES} seasocks ; cmake -P cmake_install.cmake
 	
 %:
 	dh $@
