--- a/bela-seasocks/suite/bullseye/debian/rules
+++ b/bela-seasocks/suite/bullseye/debian/rules
@@ -5,7 +5,6 @@
 
 export DH_VERBOSE = 1
 
-
 # see FEATURE AREAS in dpkg-buildflags(1)
 #export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
@@ -22,7 +21,7 @@ override_dh_strip:
 	# Just disable for now...
 
 override_dh_auto_configure:
-	mkdir -p ./build ; cd ./build ; cmake .. -DDEFLATE_SUPPORT=OFF -DUNITTESTS=OFF -DSEASOCKS_SHARED=ON ; make -j${CORES} seasocks ; cmake CMAKE_INSTALL_PREFIX=./tmp -P cmake_install.cmake ; cd ../ ; tree
+	mkdir -p ./build ; cd ./build ; cmake .. -DDEFLATE_SUPPORT=OFF -DUNITTESTS=OFF -DSEASOCKS_SHARED=ON ; make seasocks ; cmake -DCMAKE_INSTALL_PREFIX=./tmp -P cmake_install.cmake ; cd ../ ; tree
 	
 %:
 	dh $@
