--- a/bb-u-boot-am57xx-evm-beta/suite/buster/debian/control
+++ b/bb-u-boot-am57xx-evm-beta/suite/buster/debian/control
@@ -1,17 +1,19 @@
-Source: bb-u-boot-am57xx-evm-exp
+Source: bb-u-boot-am57xx-evm-beta
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends:  debhelper (>= 9),
-		bc,
-		bison,
-		ca-certificates,
-		flex,
-		git,
-Standards-Version: 3.9.8
-Homepage: https://github.com/beagleboard/u-boot
+Build-Depends:
+ debhelper (>= 9)
+ , bc,
+ , bison
+ , ca-certificates
+ , flex
+ , git
+ , libssl-dev
+Standards-Version: 4.5.1
+Homepage: https://git.beagleboard.org/beagleboard/u-boot.git
 
-Package: bb-u-boot-am57xx-evm-exp
+Package: bb-u-boot-am57xx-evm-beta
 Architecture: armhf
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: beagleboard.org u-boot for am57xx_evm
