--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -421,11 +421,20 @@ Description: BeagleBoard.org 6.0-bone for am335x
 Package: bbb.io-kernel-6.1-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.1-bone7,
+Pre-Depends: linux-image-6.1.1-bone8,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.1-bone7
+Recommends: libpruio-modules-6.1.1-bone8
 Description: BeagleBoard.org 6.1-bone for am335x
  This metapackage will install linux-image-6.1-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.2-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.2.0-rc1-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.2.0-rc1-bone1
+Description: BeagleBoard.org 6.2-bone for am335x
+ This metapackage will install linux-image-6.2-bone for am335x in Debian.
 
 Package: bbb.io-kernel-4.19-bone-rt
 Section: metapackages
