--- a/bbb.io-kernel/suite/focal/debian/control
+++ b/bbb.io-kernel/suite/focal/debian/control
@@ -328,3 +328,12 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.19.17-bone11
 Description: BeagleBoard.org 5.19-bone for am335x
  This metapackage will install linux-image-5.19-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.1-bone8,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.1-bone8
+Description: BeagleBoard.org 6.1-bone for am335x
+ This metapackage will install linux-image-6.1-bone for am335x in Debian.
