--- a/bbb.io-kernel/suite/bookworm/debian/control
+++ b/bbb.io-kernel/suite/bookworm/debian/control
@@ -107,3 +107,44 @@ Recommends:
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti-rt for am57xx
  This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
+
+Package: bbb.io-kernel-6.1-ti
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.12-ti-r1
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.12-ti-r1
+Description: BeagleBoard.org 6.1-ti
+ This metapackage will install linux-image-6.1-ti in Debian.
+
+Package: bbb.io-kernel-6.1-ti-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.12-ti-r1
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.12-ti-r1
+ , rtl8723du-modules-6.1.12-ti-r1
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 6.1-ti for am335x
+ This metapackage will install linux-image-6.1-ti for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-ti-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.12-ti-r1
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.12-ti-r1
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 6.1-ti for am57xx
+ This metapackage will install linux-image-6.1-ti for am57xx in Debian.
