--- a/bbb.io-kernel/suite/bookworm/debian/control
+++ b/bbb.io-kernel/suite/bookworm/debian/control
@@ -148,3 +148,48 @@ Recommends:
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 6.1-ti for am57xx
  This metapackage will install linux-image-6.1-ti for am57xx in Debian.
+
+Package: bbb.io-kernel-6.1-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.26-bone16,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.26-bone16
+Description: BeagleBoard.org 6.1-bone for am335x
+ This metapackage will install linux-image-6.1-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.2-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.2.14-bone9,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.2.14-bone9
+Description: BeagleBoard.org 6.2-bone for am335x
+ This metapackage will install linux-image-6.2-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.3-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.3.1-bone4,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.3.1-bone4
+Description: BeagleBoard.org 6.3-bone for am335x
+ This metapackage will install linux-image-6.3-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.4-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.4.0-rc1-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.4.0-rc1-bone1
+Description: BeagleBoard.org 6.4-bone for am335x
+ This metapackage will install linux-image-6.4-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.26-bone-rt-r16,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.26-bone-rt-r16
+Description: BeagleBoard.org 6.1-bone-rt for am335x
+ This metapackage will install linux-image-6.1-bone-rt for am335x in Debian.
