--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -486,6 +486,15 @@ Recommends: libpruio-modules-6.3.1-bone4
 Description: BeagleBoard.org 6.3-bone for am335x
  This metapackage will install linux-image-6.3-bone for am335x in Debian.
 
+Package: bbb.io-kernel-6.4-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.4.0-rc1-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.4.0-rc1-bone1
+Description: BeagleBoard.org 6.4-bone for am335x
+ This metapackage will install linux-image-6.4-bone for am335x in Debian.
+
 Package: bbb.io-kernel-4.19-bone-rt
 Section: metapackages
 Architecture: armhf
