--- a/bbb.io-kernel/suite/bookworm/debian/control
+++ b/bbb.io-kernel/suite/bookworm/debian/control
@@ -149,30 +149,48 @@ Recommends:
 Description: BeagleBoard.org 6.1-ti for am57xx
  This metapackage will install linux-image-6.1-ti for am57xx in Debian.
 
+Package: bbb.io-kernel-5.10-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.179-bone72,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.179-bone72
+Description: BeagleBoard.org 5.10-bone for am335x
+ This metapackage will install linux-image-5.10-bone for am335x in Debian.
+
+Package: bbb.io-kernel-5.15-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.111-bone36,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.111-bone36
+Description: BeagleBoard.org 5.15-bone for am335x
+ This metapackage will install linux-image-5.15-bone for am335x in Debian.
+
 Package: bbb.io-kernel-6.1-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.26-bone16,
+Pre-Depends: linux-image-6.1.28-bone17,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.26-bone16
+Recommends: libpruio-modules-6.1.28-bone17
 Description: BeagleBoard.org 6.1-bone for am335x
  This metapackage will install linux-image-6.1-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.2-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.2.14-bone9,
+Pre-Depends: linux-image-6.2.15-bone10,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.2.14-bone9
+Recommends: libpruio-modules-6.2.15-bone10
 Description: BeagleBoard.org 6.2-bone for am335x
  This metapackage will install linux-image-6.2-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.3-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.3.1-bone4,
+Pre-Depends: linux-image-6.3.2-bone5,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.3.1-bone4
+Recommends: libpruio-modules-6.3.2-bone5
 Description: BeagleBoard.org 6.3-bone for am335x
  This metapackage will install linux-image-6.3-bone for am335x in Debian.
 
@@ -185,11 +203,83 @@ Recommends: libpruio-modules-6.4.0-rc1-bone1
 Description: BeagleBoard.org 6.4-bone for am335x
  This metapackage will install linux-image-6.4-bone for am335x in Debian.
 
+Package: bbb.io-kernel-5.10-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.176-bone-rt-r72,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.176-bone-rt-r72
+Description: BeagleBoard.org 5.10-bone-rt for am335x
+ This metapackage will install linux-image-5.10-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-5.15-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.111-bone-rt-r36,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.111-bone-rt-r36
+Description: BeagleBoard.org 5.15-bone-rt for am335x
+ This metapackage will install linux-image-5.15-bone-rt for am335x in Debian.
+
 Package: bbb.io-kernel-6.1-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.26-bone-rt-r16,
+Pre-Depends: linux-image-6.1.26-bone-rt-r17,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.26-bone-rt-r16
+Recommends: libpruio-modules-6.1.26-bone-rt-r17
 Description: BeagleBoard.org 6.1-bone-rt for am335x
  This metapackage will install linux-image-6.1-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-5.10-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.179-armv7-x72,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.179-armv7-x72
+Description: BeagleBoard.org 5.10-armv7 for armv7
+ This metapackage will install linux-image-5.10-armv7 for armv7 in Debian.
+
+Package: bbb.io-kernel-5.15-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.111-armv7-x36,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.111-armv7-x36
+Description: BeagleBoard.org 5.15-armv7 for armv7
+ This metapackage will install linux-image-5.15-armv7 for armv7 in Debian.
+
+Package: bbb.io-kernel-5.10-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.176-armv7-rt-x72,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.176-armv7-rt-x72
+Description: BeagleBoard.org 5.10-armv7-rt for armv7
+ This metapackage will install linux-image-5.10-armv7-rt for armv7 in Debian.
+
+Package: bbb.io-kernel-5.15-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.111-armv7-rt-x36,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.111-armv7-rt-x36
+Description: BeagleBoard.org 5.15-armv7-rt for armv7
+ This metapackage will install linux-image-5.15-armv7-rt for armv7 in Debian.
+
+Package: bbb.io-kernel-5.10-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.179-armv7-lpae-x72,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.179-armv7-lpae-x72
+Description: BeagleBoard.org 5.10-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-5.10-armv7-lpae for armv7-lpae in Debian.
+
+Package: bbb.io-kernel-5.15-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.111-armv7-lpae-x36,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.111-armv7-lpae-x36
+Description: BeagleBoard.org 5.15-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-5.15-armv7-lpae for armv7-lpae in Debian.
